--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: Actividad GitHub App web
-Description: Esto es una actividad para realizar en la UF2 de App web
+title: Actividad Aburrida Aplicaciones Web
+Description: Esto es una actividad para eliminar la diversión
