--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-cayman
 title: Actividad Aburrida Aplicaciones Web
 Description: Esto es una actividad para eliminar la diversión
